--- a/src/componentns/Main/Main.module.css
+++ b/src/componentns/Main/Main.module.css
@@ -1,8 +1,23 @@
 .main {
   background: var(--mainBackground);
+  position: relative;
 }
 .container {
   width: min(100%, 1660px);
   margin: 0 auto;
   padding: 20px 0;
+}
+.backdrop {
+  transition: 0.5s ease-in-out;
+  position: absolute;
+  background-color: #000000;
+  z-index: 2;
+  width: 100dvw;
+  height: 100dvh;
+  opacity: 0;
+}
+
+.backdropActive {
+  transition: 0.5s ease-in-out;
+  opacity: 0.31;
 }
