--- a/src/componentns/Main/Main.module.css
+++ b/src/componentns/Main/Main.module.css
@@ -7,6 +7,11 @@
   margin: 0 auto;
   padding: 20px 0;
 }
+@media screen and (max-width: 1660px) {
+  .container {
+    padding: 20px 10px;
+  }
+}
 .backdrop {
   transition: 0.5s ease-in-out;
   position: absolute;
