--- a/src/componentns/Filter/Filter.module.css
+++ b/src/componentns/Filter/Filter.module.css
@@ -6,10 +6,11 @@
   gap: 10px;
   border-radius: 10px;
   width: 400px;
-  height: 50px;
+  min-height: 50px;
   padding: 15px 29px 15px 16px;
   margin: 0 0 20px 0;
   background: #545454;
+  flex-wrap: wrap;
 }
 .selectedUserNameContainer {
 }
@@ -33,7 +34,7 @@
   background: none;
   position: absolute;
   right: 20.82px;
-  top: 50%;
+  top: 25px;
   transform: translate(0px, -50%);
 }
 .flterArrowImage {
