--- a/src/componentns/Filter/Filter.module.css
+++ b/src/componentns/Filter/Filter.module.css
@@ -1,11 +1,12 @@
 .filter {
+  position: relative;
 }
 .filterContainer {
   display: flex;
   position: relative;
   gap: 10px;
   border-radius: 10px;
-  width: 400px;
+  width: min(400px, 100%);
   min-height: 50px;
   padding: 15px 29px 15px 16px;
   margin: 0 0 20px 0;
@@ -46,6 +47,19 @@
   border-radius: 10px;
   display: flex;
   min-height: 40px;
+  position: absolute;
+  z-index: 30;
+  max-height: 160px;
+  overflow-y: scroll;
+}
+.filteredUsersContainer::-webkit-scrollbar {
+  width: 12px;
+  background-color: #2c2d2d;
+}
+
+.filteredUsersContainer::-webkit-scrollbar-thumb {
+  background-color: #545454;
+  border-radius: 22px;
 }
 .filteredUsersList {
 }
@@ -58,6 +72,7 @@
   line-height: 167%;
   color: #fff;
   padding: 10px 16px;
+  cursor: pointer;
 }
 .filteredUsersCheckbox {
   background: #ffffff;
