--- a/src/componentns/FilterInfo/FilterInfo.module.css
+++ b/src/componentns/FilterInfo/FilterInfo.module.css
@@ -2,8 +2,12 @@
   margin: 0 0 20px 0;
 }
 .filterShortInfoContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 34px;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 .filterShortInfoQuantityContainer {
@@ -26,6 +30,8 @@
   cursor: pointer;
 }
 .filterInfoPickedUsersContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding: 0 0 0 8px;
 }
@@ -37,6 +43,8 @@
   color: #fff;
 }
 .filterInfoPickedUsersList {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 .filterInfoPickedUsersItem {
